# cmake_minimum_required(VERSION <specify CMake version here>)
project(leetcode)
cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 14)

include_directories(CMAKE_CURRENT_SOURCE_DIR)

add_executable(3 3.cpp)

add_executable(11 11.cpp)
add_executable(56 56.cpp)
add_executable(1422 1422.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(72 72.cpp)
add_executable(5 5.cpp)