cmake_minimum_required(VERSION 3.20)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

include_directories(CMAKE_CURRENT_SOURCE_DIR)

add_executable(3 3.cpp)

add_executable(11 11.cpp)
add_executable(56 56.cpp)
add_executable(1422 1422.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(72 72.cpp)
add_executable(5 5.cpp)
add_executable(7 7.cpp)
add_executable(87 87.cpp)
add_executable(813 813.cpp)
add_executable(746 746.cpp)
add_executable(576 576.cpp)
add_executable(139 139.cpp)
add_executable(140 140.cpp)
add_executable(208 208.cpp)
add_executable(472 472.cpp)
add_executable(347 347.cpp)
add_executable(1652 1652.cpp)
add_executable(1143 1143.cpp)
add_executable(521 521.cpp)
add_executable(522 522.cpp)