cmake_minimum_required(VERSION 3.20)
project(TestProject)

set(CMAKE_CXX_STANDARD 20)

include_directories(CMAKE_CURRENT_SOURCE_DIR)

add_executable(3 3.cpp)
add_executable(11 11.cpp)
add_executable(56 56.cpp)
add_executable(1422 1422.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(72 72.cpp)
add_executable(5 5.cpp)
add_executable(97 97.cpp)
add_executable(7 7.cpp)
add_executable(87 87.cpp)
add_executable(813 813.cpp)
add_executable(746 746.cpp)
add_executable(576 576.cpp)
add_executable(139 139.cpp)
add_executable(140 140.cpp)
add_executable(208 208.cpp)
add_executable(472 472.cpp)
add_executable(347 347.cpp)
add_executable(1652 1652.cpp)
add_executable(1143 1143.cpp)
add_executable(521 521.cpp)
add_executable(522 522.cpp)
add_executable(77 77.cpp)
add_executable(2141 2141.cpp)
add_executable(2147 2147.cpp)
add_executable(1583 1583.cpp)
add_executable(1320 1320.cpp)
add_executable(396 396.cpp)
add_executable(2583 2583.cpp)
add_executable(90 90.cpp)
add_executable(2216 2216.cpp)
add_executable(1207 1207.cpp)
add_executable(2171 2171.cpp)
add_executable(907 907.cpp)
add_executable(670 670.cpp)
add_executable(2527 2527.cpp)
add_executable(91 91.cpp)
add_executable(2765 2765.cpp)
add_executable(2865 2865.cpp)